urpc/internal/core/analysis/testdata/errors/types/undefined_in_inline.ufo
// @expect: E201

type User {
	data: {
		profile: Profile
	}
}
